fix: date-picker behind date-filter in datagrid (#1840)
Closes #1838

--- a/src/clr-addons/components.clr-addons.scss
+++ b/src/clr-addons/components.clr-addons.scss
@@ -189,9 +189,6 @@ body,
   display: none;
 }
 
-.datagrid-filter.clr-popover-content {
-  z-index: 1060;
-}
 .datagrid-filter {
   .datagrid-date-filter-input {
     width: 7rem;
